# matchine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
benchmarks/: README.md  dynamic_cast.cpp
demos/: customize_match_for_variant.cpp  match_any.cpp  match_polyobj.cpp  overload.cpp
include/ni/: type_hierarchy.h
include/ni/functional/: match.h  matchable_any.h  overload.h  signature.h
include/ni/meta/: bools.h  dispatch.h  fold_add.h  fold_and.h  fold_or.h  scan_add.h  try_catch.h
tests/: main.cpp  match.test.cpp  match_any.test.cpp  meta.test.cpp  overload.test.cpp  signature.test.cpp  type_hierarchy.test.cpp
